--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@ root = true
 [*]
 end_of_line = LF
 charset = utf-8
-max_line_length = 80
+## max_line_length = 80
 
 [*.vim]
 indent_style = space
@@ -22,3 +22,8 @@ max_line_length = 120
 [*.yml]
 indent_style = space
 indent_size = 2
+
+[*.js]
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = true
